[project]
name = "dsp-board"
version = "0.1.0"
description = "Digital signal processing toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "pysptk>=1.0.1",
    "pytest>=8.4.2",
    "pyworld>=0.3.5",
    "setuptools<=79",
    "torch>=2.5.1",
    "torchaudio>=2.5.1, <2.8.0",
]
[tool.pytest.ini_options]
markers = [
    "torch: tests that use PyTorch",
    "sptk: tests that use SPTK",
    "world: tests that use WORLD",
    "cuda: tests that use CUDA",
]
[tool.setuptools]
packages = ["dsp_board"]
